feat: test session coverage API
